  + unihanChar_has_property() is renamed as unihanChar_has_field()
  + unihanField_get_table() is renamed as unihanField_get_preferred_table()
  + Argument const_count in stringList_sized_new() is removed.

- Removed:
  + No more UNIHAN_DEFAULT_DB
  + UNIHAN_FIELD_VARIANT_TYPE is removed.
  + unihanField_is_case_no_change()

* Tue Oct 21 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-3
- Add following make targets: rpm_lint, koji_submit, koji_build,  pkg_remove_old.


* Mon Oct 20 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-0
- New Features:
  collection.h, file_function.h and verboseMsg.h is in API.
- Fixed:
  Missing documents in 0.5.2
- Changed:
  + collection.h: 
    - G_ARRAY_COPY is renamed as G_ARRAY_CONCAT to reflect its real functionality.
    - hashSet_new_full() now only takes 4 parameters because value value_destroy_func is not required,
      as in hashSet, key == value.
  + file_functions.h:
  - search_file_given_paths() is replaced by filename_search_paths()
  - replace file_determine() with file_choose()



* Tue Oct 06 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.2-0
- New Features:
  + New pseudo field 'ZhuYin'.
  + allocate.h is in API.
  + New unihan_query options: -O -P -T -Z -z
  + Scalar String (U+XXXXX) is now be able to use in the input of Field query.
  + New functions: unihanField_is_case_no_change() and unihanField_is_lowercase()
- Fixed:
  + Behavior of unihan_query -U is now corrected.
  + Descriptions about pseudo field are corrected.
  + Handle NULL of str in stringList_insert(StringList *sList, const char *str).
- Changed:
  + In document, "simply query" is replaced by "field query".
  + unihanField_is_scalar_value() is renamed as unihanField_is_ucs4().
  + pinyin_strip_tone() and zhuYin_strip_tone()  now return 0 if tone of
    pinyin/zhuyin is not specified.
  + Doxyfile is renamed as Doxygen.in, so no need to manually modified the
  version number.

